discussion/kv_engine/183092/183092_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54640: Add support for client connection information

@todo add mcstat example

Change-Id: Icef362281b80fe23ab9015c85834d53d90398d18

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-11-22 08:12:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-22 08:12:46.000000000
Message: 
Patch Set 4: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/325874/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-22 08:22:04.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/638/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/638/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/513/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/513/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/503/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/503/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/740/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/740/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/494/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/494/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/497/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.cc:933:53: error: non-const lvalue reference to type "DcpMessageProducersIface" cannot bind to a value of unrelated type "Connection" [clang-diagnostic-error]
                            *cookies.front().get(), *this);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/include/memcached/dcp.h:387:60: note: passing argument to parameter "producers" here
                                 DcpMessageProducersIface& producers) = 0;
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.h:950:26: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    const nlohmann::json peername;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.h:953:26: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    const nlohmann::json sockname;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/497/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.cc:933:53:
error: non-const lvalue reference to type "DcpMessageProducersIface" cannot bind to a value of unrelated type "Connection" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/497/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/481/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/daemon/connection.h:950:26:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/481/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/489/ : FAILURE

Compile error at [2022-11-22T08:13:56.372Z] ../kv_engine/daemon/connection.h:950:26:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/489/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/513/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.Mcbp/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.Mcbp/Mcbp
[2022-11-22T08:19:23.608Z] unknown file: Failure
[2022-11-22T08:19:23.608Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response for IFCONFIG" thrown in the test body.
[2022-11-22T08:19:23.608Z] [  FAILED  ] TransportProtocols/InterfacesTest.Mcbp/Mcbp, where GetParam() = Mcbp (2008 ms)
TransportProtocols/InterfacesTest.Mcbp/Mcbp
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/513/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21291/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/504/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
